--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
   scroll-behavior: smooth;
 }
 
@@ -62,7 +62,7 @@ a {
 }
 
 .section__margin {
-  padding: 4rem 6rem;
+  margin: 4rem 6rem;
 }
 
 .scale-up-center {
@@ -99,7 +99,7 @@ a {
   }
 
   .section__margin {
-    padding: 4rem;
+    margin: 4rem;
   }
 }
 
@@ -109,6 +109,6 @@ a {
   }
 
   .section__margin {
-    padding: 4rem 2rem;
+    margin: 4rem 2rem;
   }
 }
